# hiking-menu-configurator-backend

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __main__.py
src/core/: create_app.py  settings.py
src/core/api/: app_status.py
src/core/api/controllers/: meal.py
src/core/api/models/: meal.py
src/core/api/models/meals/: db_meal.py  meal.py
src/core/api/models/users/: db_user.py  user.py
src/core/api/utils/user/: auth.py  user_utils.py
src/core/api/views/: meal.py  user.py
src/core/settings/: base_settings.py  db_settings.py
