[tool.poetry]
name = "hiking-menu-configurator-backend"
version = "0.0.1"
description = "Back for menu configurator"
authors = ["Tvister7 <kirzap123@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
pydantic = { extras = ["dotenv"], version = "^1.6.1" }
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
sqlmodel = "^0.0.6"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
bumpversion = "^0.5.3"
flake8 = "^3.7"
mypy = "^0.761.0"
rope = "^0.16.0"
bandit = "^1.6.2"
python-dateutil = "^2.8.1"
pytest-cov = "^2.10.1"
tqdm = "^4.54.1"
isort = "^5.7.0"
flake8-eradicate = "^1.0.0"
flake8-print = "^4.0.0"
flake8-use-fstring = "^1.1.0"

[tool.pylint]
extension-pkg-whitelist = ["orjson"]

[tool.pylint.messages_control]
disable = [
    "relative-beyond-top-level",
    "format", # handled by black
    "invalid-name",
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.bandit]
skips = ["B601"]

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
